--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <a href="#about" class="text-gray-700 hover:text-indigo-600 transition">About</a>
                     <a href="#vision" class="text-gray-700 hover:text-indigo-600 transition">Vision</a>
                     <a href="#programs" class="text-gray-700 hover:text-indigo-600 transition">Programs</a>
-                    <a href="teacher-training.html" class="text-gray-700 hover:text-indigo-600 transition">Teacher Training</a>
+                    <a href="/teacher-training.html" class="text-gray-700 hover:text-indigo-600 transition">Teacher Training</a>
                     <a href="#leadership" class="text-gray-700 hover:text-indigo-600 transition">Leadership</a>
                     <a href="#contact" class="text-gray-700 hover:text-indigo-600 transition">Contact</a>
                 </div>
