--- a/teacher-training.html
+++ b/teacher-training.html
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="flex flex-row gap-2">
-                    <a href="/teacher-training.html" class="bg-white text-indigo-600 px-4 py-2 rounded-full font-bold hover:bg-gray-100 transition transform hover:scale-105 text-center whitespace-nowrap text-sm">
+                    <a href="teacher-training.html" class="bg-white text-indigo-600 px-4 py-2 rounded-full font-bold hover:bg-gray-100 transition transform hover:scale-105 text-center whitespace-nowrap text-sm">
                         Learn More
                     </a>
                     <a href="https://forms.gle/Ry4sdkVsgU9tztoa6" target="_blank" class="bg-yellow-400 text-gray-900 px-4 py-2 rounded-full font-bold hover:bg-yellow-300 transition transform hover:scale-105 text-center whitespace-nowrap text-sm">
@@ -202,7 +202,7 @@
                     <a href="index.html#about" class="text-gray-700 hover:text-indigo-600 transition">About</a>
                     <a href="index.html#vision" class="text-gray-700 hover:text-indigo-600 transition">Vision</a>
                     <a href="index.html#programs" class="text-gray-700 hover:text-indigo-600 transition">Programs</a>
-                    <a href="/teacher-training.html" class="text-indigo-600 font-semibold transition">Teacher Training</a>
+                    <a href="teacher-training.html" class="text-indigo-600 font-semibold transition">Teacher Training</a>
                     <a href="index.html#leadership" class="text-gray-700 hover:text-indigo-600 transition">Leadership</a>
                     <a href="index.html#contact" class="text-gray-700 hover:text-indigo-600 transition">Contact</a>
                 </div>
@@ -231,7 +231,7 @@
                 <a href="index.html#about" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">About</a>
                 <a href="index.html#vision" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Vision</a>
                 <a href="index.html#programs" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Programs</a>
-                <a href="/teacher-training.html" class="block text-indigo-600 bg-indigo-50 font-semibold px-3 py-2 rounded-md transition">Teacher Training</a>
+                <a href="teacher-training.html" class="block text-indigo-600 bg-indigo-50 font-semibold px-3 py-2 rounded-md transition">Teacher Training</a>
                 <a href="index.html#leadership" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Leadership</a>
                 <a href="index.html#contact" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Contact</a>
                 <!-- <div class="pt-3 border-t border-gray-200 space-y-2">
@@ -664,7 +664,7 @@
                             <li><a href="https://understandquranglobal.com/courses/" target="_blank" class="text-gray-300 hover:text-indigo-400 transition flex items-center space-x-2">
                                 <span>📚</span><span>UQG Courses</span>
                             </a></li>
-                            <li><a href="/teacher-training.html" class="text-gray-300 hover:text-indigo-400 transition flex items-center space-x-2">
+                            <li><a href="teacher-training.html" class="text-gray-300 hover:text-indigo-400 transition flex items-center space-x-2">
                                 <span>👨‍🏫</span><span>Teacher Training</span>
                             </a></li>
                         </ul>
