--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             }
         }
     </style>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="index.css">
 </head>
 <body class="bg-gray-50">
     <!-- Countdown Banner -->
@@ -244,7 +244,7 @@
                     <a href="#about" class="text-gray-700 hover:text-indigo-600 transition">About</a>
                     <a href="#vision" class="text-gray-700 hover:text-indigo-600 transition">Vision</a>
                     <a href="#programs" class="text-gray-700 hover:text-indigo-600 transition">Programs</a>
-                    <a href="/teacher-training.html" class="text-gray-700 hover:text-indigo-600 transition">Teacher Training</a>
+                    <a href="teacher-training.html" class="text-gray-700 hover:text-indigo-600 transition">Teacher Training</a>
                     <a href="#leadership" class="text-gray-700 hover:text-indigo-600 transition">Leadership</a>
                     <a href="#contact" class="text-gray-700 hover:text-indigo-600 transition">Contact</a>
                 </div>
@@ -272,7 +272,7 @@
                 <a href="#about" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">About</a>
                 <a href="#vision" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Vision</a>
                 <a href="#programs" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Programs</a>
-                <a href="/teacher-training.html" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Teacher Training</a>
+                <a href="teacher-training.html" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Teacher Training</a>
                 <a href="#leadership" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Leadership</a>
                 <a href="#contact" class="block text-gray-700 hover:text-indigo-600 hover:bg-gray-50 px-3 py-2 rounded-md transition">Contact</a>
                 <!-- <div class="pt-3 border-t border-gray-200 space-y-2">
@@ -773,7 +773,7 @@
                             <li><a href="https://understandquranglobal.com/courses/" target="_blank" class="text-gray-300 hover:text-indigo-400 transition flex items-center space-x-2">
                                 <span>📚</span><span>UQG Courses</span>
                             </a></li>
-                            <li><a href="/teacher-training.html" class="text-gray-300 hover:text-indigo-400 transition flex items-center space-x-2">
+                            <li><a href="teacher-training.html" class="text-gray-300 hover:text-indigo-400 transition flex items-center space-x-2">
                                 <span>👨‍🏫</span><span>Teacher Training</span>
                             </a></li>
                         </ul>
@@ -911,6 +911,6 @@
             setInterval(updateCountdown, 1000);
         });
     </script>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="index.tsx"></script>
 </body>
 </html>
